# my-projects

./: README.md
algorithm-visualizer/: README.md
algorithm-visualizer/src/: algorithm_manager.py  algorithm_selector.py  clustering_algorithms.py  clustering_manager.py  clustering_selector.py  clustering_visualizer.py  main.py  main_clustering.py  main_pathfinding.py  main_sorting.py  pathfinding_algorithms.py  pathfinding_manager.py  pathfinding_selector.py  pathfinding_visualizer.py  sorting_algorithms.py  sorting_manager.py  sorting_selector.py  sorting_visualizer.py  visualizer.py
blackjack-q-learning/: README.md
blackjack-q-learning/src/: .gitignore  blackjack_env.py  play.py  table.py  training.py
gl-scrapbook/: CMakeLists.txt  Readme.md
gl-scrapbook/Resources/: shaderFrag.frag  shaderVert.vert
gl-scrapbook/include/glad/: glad.h
gl-scrapbook/src/: glad.c  main.cc  render.cc  render.hh  resources.cc  resources.hh
gl-scrapbook/src/OpenGL/: camera.hh  functions.cc  functions.hh  shader.cc  shader.hh
tictactoe-sfml/: Doxyfile  Makefile  README.md  UI_game.cc  UI_game.hh  game.cc  game.hh  main.cc
tictactoe-sfml/html/: UI__game_8cc.html  UI__game_8hh.html  UI__game_8hh__dep__incl.map  UI__game_8hh__dep__incl.md5  UI__game_8hh_source.html  annotated.html  classTicTacToe-members.html  classTicTacToe.html  classes.html  classgameUI-members.html  classgameUI.html  files.html  functions.html  functions_func.html  game_8cc.html  game_8cc__incl.map  game_8cc__incl.md5  index.html  (+10 more)
tictactoe-terminal/: Doxyfile  Makefile  README.md  game.cc  game.hh  main.cc
(+76 files in other folders)
